docs: enhance About section for improved discoverability
Significantly expanded the About Jextract section with:

**Problem-Solution Framing:**
- Clear explanation of traditional JNI pain points
- How jextract automates native interop

**Comprehensive Use Cases:**
- System libraries (POSIX, macOS frameworks, Linux syscalls)
- Graphics & Media (OpenGL, Vulkan, FFmpeg, SDL2, Cairo)
- Scientific computing (BLAS, LAPACK, FFTW, HDF5, CUDA)
- Embedded systems (libusb, wiringPi, serial ports)
- Database & performance (SQLite, RocksDB, custom allocators)

**Technical Deep-Dive:**
- Comparison table: Jextract + FFM API vs Traditional JNI
- Technical highlights (MemorySegment, Arena, MethodHandle, etc.)
- Requirements and prerequisites
- Project Panama integration context

**Target Audiences:**
- Java developers, systems programmers, library authors
- Scientific computing, game development, IoT/embedded engineers

**SEO Keywords Added:**
- JNI, FFI, FFM API, Project Panama, JEP 454
- Native interop, C bindings, foreign function
- Code generation, libclang, memory safety

**Repository Metadata:**
- Updated description with key terms
- Added 15 topics: jextract, project-panama, java, openjdk, jni,
  ffi, ffm-api, native-interop, homebrew, homebrew-tap, c-bindings,
  native-libraries, code-generation, foreign-function, jep-454

This enhancement improves GitHub search discoverability and helps
developers understand when and why to use jextract.